--- a/static/index.css
+++ b/static/index.css
@@ -3,18 +3,19 @@
     padding: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap'); 
 
 .navbar{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;  
     position: fixed;
     top: 0;
     cursor: pointer;
     width: 100%;
     background-size: cover;
     background-blend-mode: darken;
+
 }
 
 .logo{
@@ -51,14 +52,14 @@
 
 .nav-list li a{
     text-decoration: none;
-    color: yellow;
+    color: black;
     font-style: bold;
 }  
 
 .nav-list li a:hover{
     text-decoration: none;
     color: darkorchid;
-    font-style: 'Ubuntu', sans-serif; 
+    font-style: italic; 
 }
 
 .rightnav{
@@ -137,7 +138,17 @@ body {
     font-size: 14px;
     transition: 0.3s;
 }
-
+.diet-card select {
+    width: 100%;
+    height: 45px;
+    padding: 20px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    font-size: 14px;
+    transition: 0.3s;
+    color: #555;
+}
 .diet-card input:focus {
     border-color: #1d976c;
     outline: none;
