--- a/templates/result.html
+++ b/templates/result.html
@@ -31,24 +31,24 @@
         <h1>Meal Plan</h1>
     </section>
     <section class="meal-section">
-        <div class="meal">
-            <h2>Breakfast:</h2>
-            <p>Healthy start to boost your metabolism.</p>
+        <div class="meal-card">
+        <h3>Breakfast:</h3>
+        <p>{{ meal_plan.breakfast }}</p>
         </div>
 
-        <div class="meal">
-            <h2>Lunch:</h2>
-            <p>Balanced meal for sustained energy.</p>
+        <div class="meal-card">
+            <h3>Lunch:</h3>
+            <p>{{ meal_plan.lunch }}</p>
         </div>
 
-        <div class="meal">
-            <h2>High Tea:</h2>
-            <p>Light snacks to keep hunger away.</p>
+        <div class="meal-card">
+            <h3>High Tea:</h3>
+            <p>{{ meal_plan.high_tea }}</p>
         </div>
 
-        <div class="meal">
-            <h2>Dinner:</h2>
-            <p>Light and nutritious for better digestion.</p>
+        <div class="meal-card">
+            <h3>Dinner:</h3>
+            <p>{{ meal_plan.dinner }}</p>
         </div>
     </section>
 </body>
